--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     <div class="wrapper">
         <div class="button">
             <div class="icon"><i class="fab fa-facebook-f"></i></div>
+            <span>Facebook</span>
+        </div>
+        <div class="button">
+            <div class="icon"><i class="fab fa-twitter"></i></div>
+            <span>Twitter</span>
+        </div>
+        <div class="button">
+            <div class="icon"><i class="fab fa-instagram"></i></div>
+            <span>Instagram</span>
+        </div>
+        <div class="button">
+            <div class="icon"><i class="fab fa-github"></i></div>
+            <span>GitHub</span>
+        </div>
+        <div class="button">
+            <div class="icon"><i class="fab fa-linkedin"></i></div>
+            <span>LinkedIn</span>
         </div>
     </div>
 </body>
